--- a/client/main.html
+++ b/client/main.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-	<div class="container-fluid">
+	<div class="container">
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 				<div class="navbar-header">
 					<a class="navbar-brand" href="/">Class</a>
