--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,9 @@
 <head>
 	<title>Class</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
